# SnakeGame

./: AudioManager.cpp  AudioManager.h  CMakeLists.txt  HighScoreManager.cpp  HighScoreManager.h  HightScoreManager.cpp  HightScoreManager.h  README.txt  Snake.h  Snakegame.cbp  Snakegame.depend  Snakegame.layout  Snanke.cpp  TextureManager.h  TextureManeger.h  Texturemanager.cpp  Texturemanagere.cpp  Utilities.h  Utils.cpp  Utils.h  Vector2D.h  constants.h  food.cpp  food.h  game.cpp  game.h  main.cpp  snake.cpp  tail.cpp  tail.h
